--- a/Random Users/Views/Base.lproj/Main.storyboard
+++ b/Random Users/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RandomUser" rowHeight="120" id="HBk-AZ-Ubl" customClass="RandomUsersTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RandomUser" rowHeight="120" id="HBk-AZ-Ubl" customClass="RandomUserTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HBk-AZ-Ubl" id="pwQ-pE-3lv">
@@ -47,8 +47,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="randomUsersImageView" destination="FaN-6y-FGH" id="r4v-8l-1V0"/>
-                                    <outlet property="randomUsersLabel" destination="cqP-ds-P2W" id="dm2-xj-v0h"/>
+                                    <outlet property="randomUsersImageView" destination="FaN-6y-FGH" id="vQD-fm-2qw"/>
+                                    <outlet property="randomUsersLabel" destination="cqP-ds-P2W" id="FAF-ty-lC7"/>
                                     <segue destination="DdD-iD-DtJ" kind="show" identifier="ShowRandomUser" id="6Ev-E5-L3Z"/>
                                 </connections>
                             </tableViewCell>
